# 397_homework

taz15_p1/: taz15_p1_writeup.docx
taz15_p2/: CMakeLists.txt  README.md  package.xml  taz15_p2_writeup.docx
taz15_p2/msg/: sinCmdMsg.msg
taz15_p2/src/: min_ctl.cpp  min_ctl.cpp~  sin_command.cpp  sin_command.cpp~  sin_command_client.cpp
taz15_p2/srv/: sinCmdSrv.srv
taz15_p3/: CMakeLists.txt~  README.md  eeefef~  package.xml~  quick.launch~  taz15_p3_writeup.docx
taz15_p3/action/: commandAction.action
taz15_p3/launch/: gl.launch~  q1.launch  q2.launch~  quick.launch~
taz15_p3/src/: min_ctl2.cpp  sin_command2.cpp  sin_command2.cpp~  sin_command_client2.cpp  sin_command_client2.cpp~
taz15_p4/: taz15_p4_writeup.docx
taz15_p4/minimal_joint_controller/: CMakeLists.txt  CMakeLists.txt~
taz15_p4/minimal_joint_controller/src/: minimal_joint_controller.cpp  sine_commander.cpp
taz15_p4/minimal_robot_description/: minimal_robot_description.urdf~
taz15_p5/: HW5 Write Up.docx  READ ME
taz15_p5/big_gazebo_arm/: CMakeLists.txt  big_arm_desc.urdf  package.xml
taz15_p5/big_gazebo_arm/control_config/: three_dof_ctl.yaml
taz15_p5/big_gazebo_arm/launch/: big_arm.launch
taz15_p5/big_gazebo_arm/src/: sine_commander.cpp
taz15_p6/: taz15_p6_writeup.docx
taz15_p6/class_wobbler/: CMakeLists.txt  README.md  package.xml
taz15_p6/class_wobbler/launch/: lidar_wobbler.launch  lidar_wobbler.launch~
taz15_p6/class_wobbler/model/: lidar_wobbler.urdf
taz15_p6/class_wobbler/src/: lidar_transformer.cpp  wobbler_sine_commander.cpp
taz15_p7/: READ ME  READ ME~  taz15_p7_writeup.docx
taz15_p7/baxter_playfile_nodes/: guitar_l.jsp  guitar_r.jsp  guitar_r.jsp~
taz15_p8/: taz15_p8_writeup.docx
taz15_p8/UR10_Reachability_Points/: reachable_x_y_z2  reachable_x_y_z3  reachable_x_y_z4  reachable_x_y_z5  reachable_x_y_z6
taz15_p8/ur_fk_ik/: CMakeLists.txt  README.md
taz15_p8/ur_fk_ik/src/: ur10_reach.cpp
taz15_p9/: p9_writeup~
taz15_p9/cwru_ariac/part_fetcher/: CMakeLists.txt  CMakeLists.txt~
taz15_p9/cwru_ariac/part_fetcher/src/: example_part_fetcher_client.cpp~  part_fetcher_action_server.cpp
taz15_p9/object_manipulation_properties/src/: sticky_fingers_manip_fncs.cpp~
